# uno-ai

./: .pre-commit-config.yaml  pyproject.toml
templates/: game.html
uno-ai-backend/: __main__.py
