[tool.poetry]
name = "uno-ai-backend"
version = "0.1.0"
description = ""
authors = ["KShivendu <kshivendu1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
rlcard = "^1.2.0"
websockets = "^14.2"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
